erDiagram
    BUSINESSES ||--o{ USERS : owns
    BUSINESSES ||--o{ CHANNELS : connects
    BUSINESSES ||--o{ CUSTOMERS : owns
    BUSINESSES ||--o{ CONVERSATIONS : scopes
    BUSINESSES ||--o{ DOCUMENTS : owns
    BUSINESSES ||--o{ PRODUCTS : catalogs
    BUSINESSES ||--o{ ORDERS : receives
    BUSINESSES ||--o{ SUBSCRIPTIONS : subscribes
    BUSINESSES ||--o| CHATBOT_CONFIGS : configures

    SERVICE_PLANS ||--o{ SUBSCRIPTIONS : selected_by
    SUBSCRIPTIONS ||--o{ PAYMENTS : paid_by
    BUSINESSES ||--o{ PAYMENTS : makes

    CHANNELS ||--o{ CHANNEL_EVENTS : receives
    CHANNELS ||--o{ CONVERSATIONS : carries

    CUSTOMERS ||--o{ CONVERSATIONS : starts
    CUSTOMERS ||--o{ ORDERS : places
    CONVERSATIONS ||--o{ MESSAGES : contains
    CONVERSATIONS ||--o{ CONVERSATION_ASSIGNMENTS : assigned_history
    CONVERSATIONS ||--o{ CONVERSATION_TAGS : labeled
    CONVERSATIONS ||--o{ ORDERS : creates
    USERS ||--o{ CONVERSATION_ASSIGNMENTS : handles
    TAGS ||--o{ CONVERSATION_TAGS : groups

    PRODUCTS ||--o{ ORDER_ITEMS : appears_in
    ORDERS ||--o{ ORDER_ITEMS : contains
    DOCUMENTS ||--o{ DOCUMENT_CHUNKS : splits_into

    BUSINESSES {
        int id PK
        string name
        string slug UK
        string status
    }
    USERS {
        int id PK
        int business_id FK
        string email
        string role
        boolean is_active
    }
    SERVICE_PLANS {
        int id PK
        string code UK
        decimal price
        string billing_cycle
    }
    SUBSCRIPTIONS {
        int id PK
        int business_id FK
        int plan_id FK
        string status
        datetime ends_at
    }
    PAYMENTS {
        int id PK
        int business_id FK
        int subscription_id FK
        decimal amount
        string status
    }
    CHANNELS {
        int id PK
        int business_id FK
        string channel_type
        string external_account_id
        string status
    }
    CHANNEL_EVENTS {
        int id PK
        int channel_id FK
        string external_event_id UK
        string status
        datetime received_at
    }
    CUSTOMERS {
        int id PK
        int business_id FK
        string channel
        string external_user_id
        string phone
    }
    CONVERSATIONS {
        int id PK
        int business_id FK
        int customer_id FK
        int channel_id FK
        int assigned_user_id FK
        string status
        string priority
    }
    CONVERSATION_ASSIGNMENTS {
        int id PK
        int conversation_id FK
        int user_id FK
        string assignment_type
        datetime assigned_at
    }
    MESSAGES {
        int id PK
        int conversation_id FK
        int sender_user_id FK
        string direction
        string content
        string status
    }
    TAGS {
        int id PK
        int business_id FK
        string name
        string color
    }
    CONVERSATION_TAGS {
        int id PK
        int conversation_id FK
        int tag_id FK
        int created_by FK
    }
    PRODUCTS {
        int id PK
        int business_id FK
        string sku
        string name
        decimal price
    }
    ORDERS {
        int id PK
        int business_id FK
        int customer_id FK
        int conversation_id FK
        string order_number
        decimal total_amount
    }
    ORDER_ITEMS {
        int id PK
        int order_id FK
        int product_id FK
        int quantity
        decimal line_total
    }
    DOCUMENTS {
        int id PK
        int business_id FK
        string filename
        string status
        int chunk_count
    }
    DOCUMENT_CHUNKS {
        int id PK
        int document_id FK
        int chunk_index
        vector embedding
    }
    CHATBOT_CONFIGS {
        int id PK
        int business_id FK UK
        boolean enabled
        int top_k
        float similarity_threshold
    }
